# athena-platform

./: .claude-project-context.md  .env.example  .env.production  .env.production.xiaonuo  .env.test  .gitignore  .gitlab-ci-local.yml  .pre-commit-config.yaml  .ruff.toml  Athena_渐进式重构计划_20260421.md  Athena_项目现状扫描报告_20260420.md  Athena_项目现状扫描报告_20260421.md  CLAUDE.md  DOCKER_COMPOSE_MERGE_REPORT.md  DOCKER_COMPOSE_MIGRATION_GUIDE.md  DOCKER_COMPOSE_QUICK_REFERENCE.md  Dockerfile.learning  Dockerfile.patent-drafting  MIGRATION_GUIDE.md  Makefile  P1服务依赖检查报告_20260420.md  PHASE1_DAY1_2_CHECKLIST.md  PHASE1_DAY3_SUMMARY.md  PHASE1_DAY4_5_SUMMARY.md  PHASE1_DAY6_SUMMARY.md  PHASE1_DAY7_SUMMARY.md  PHASE1_FINAL_REPORT.md  PHASE1_VERIFICATION_REPORT.md  PHASE2_WEEK1_PLAN.md  PHASE2_WEEK1_PROGRESS.md  PROJECT_CLEANUP_REPORT_20260419.md  PROMPT_INVENTORY.md  QUICK_START_MONITORING.md  README.md  REPORT_CLEANUP_SUMMARY_20260419.md  advanced_patent_search.py  analyze_new_evidence.py  analyze_new_evidence_enhanced.py  athena_env  athena_simplified_api.py  (+34 more)
cli/: MVP_LAUNCH_REPORT.md  diagnose_httpx.py  patent_ids.txt  pyproject.toml  queries.txt  test_batch_quick.py  test_httpx.py  test_httpx_curl.py  test_requests.py
cli/athena_cli/: main.py
cli/athena_cli/commands/: __init__.py  analyze.py  batch.py  config.py  search.py
cli/athena_cli/output/: __init__.py
cli/athena_cli/services/: api_client.py  config.py  curl_api_adapter.py  omlx_api_adapter.py  real_api_adapter.py  urllib_api_adapter.py
cli/athena_cli/utils/: __init__.py
cli/docs/: MVP_VALIDATION_PLAN.md  PERFORMANCE_OPTIMIZATION_REPORT.md  REAL_API_TEST_REPORT.md  WEEK1_DAY1-3_SUMMARY.md  WEEK1_DAY4-5_FINAL_REPORT.md  WEEK1_PROGRESS_REPORT.md
cli/tests/: __init__.py  test_commands.py  test_curl_adapter.py  test_omlox_adapter.py  test_performance.py  test_real_api.py  test_urllib_api.py
core/: patent  (+32 more)
mcp-servers/gaode-mcp-server/: .env.example  README.md  pyproject.toml  run_server.py
mcp-servers/gaode-mcp-server/docs/: DEPLOYMENT.md
mcp-servers/gaode-mcp-server/scripts/: start.sh
mcp-servers/gaode-mcp-server/src/amap_mcp_server/: __init__.py  config.py  server.py
production/config/: .env.memory  .env.template  __init__.py  agent_registry.json  agents_identity_config.json  ai_agents_model_config.json  alert_rules.json  api_gateway_crawler.json  api_performance_monitor.json  athena_aliases.sh  athena_services.conf  base.yaml  bash_aliases.sh  bge_model_config.py  cache_optimized.json  central_config.py  claude_desktop_config_additions.json  claude_desktop_config_full.json  config_loader.py  config_manager.py  configure_gemini_llm.py  configure_zhipu_llm.py  database.yaml  deepseek_config.yaml  development.yaml  domestic_llm_integration.py  elasticsearch.yaml  execution_config.json  external_search_production.json  external_storage_config.yaml  glm_mcp_config.yaml  glm_resource_packages_config.json  intent_config.yaml  judgment_vector_db_config.yaml  learning_config.yaml  legal_knowledge_unification.json  legal_search_optimized.json  llm_config.json  llm_config.yaml  llm_model_registry.json  (+52 more)
production/config/capabilities/: legal_writing_capability_design.md
production/config/database/: local_database_config.sh  local_database_config.yaml  patent_pool_config.yaml
production/config/docker/: .env.example  DOCKER_COMPOSE_UNIFICATION_GUIDE.md  README.md  alertmanager-configured.yml  alertmanager.yml  athena-intelligent-router.service  docker-compose.applications.yml  docker-compose.core-services.yml  docker-compose.infrastructure.yml  docker-compose.local-db.yml  docker-compose.mcp-servers.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.unified-databases.yml  docker-compose.yml  prometheus-simple.yml  xiaonuo-orchestrator.Dockerfile
production/config/document_management/: classification_config.py
production/config/environments/: __init__.py  production.yaml  production.yaml.template
production/config/environments/production/: config.yaml  model_config.yaml
production/config/grafana/dashboards/: athena-dashboard.json
production/config/identity/: athena.json  identity_relationships.md  restored_identity_info.md  xiaochen.json  xiaonuo_pisces_princess.json  xiaonuo_v4.json
production/config/monitoring/: MONITORING_OPTIMIZATION_REPORT.md  PROMETHEUS_CONFIG_APPLIED_REPORT.md  PROMETHEUS_CONFIG_VERIFICATION_REPORT.md  alert_rules.yml  alertmanager_config.yml  ethics_alerts.yml  grafana-ethics-dashboard.json  grafana-intent-dashboard.json  grafana-router-dashboard.json  memory_alerts.yml  optimization.logrotate.conf  prometheus-ethics.yml  prometheus-router-rules.yml  prometheus.yml  prometheus_config.yml
production/config/monitoring/alert_rules/: oa_response_alerts.yml
production/config/monitoring/alertmanager/: alertmanager.yml
production/config/monitoring/grafana/: business_metrics_dashboard.json  cognitive_decision_dashboard.json  enhanced_dashboard_variables.yml
production/config/monitoring/grafana_dashboards/: athena_overview.json
production/config/monitoring/prometheus/: prometheus-optimized.yml
production/config/nginx/: intent-service.conf  nginx.conf
production/config/optimization/: xiaonuo_production.yaml  xiaonuo_stage2.yaml  xiaonuo_stage3_full.yaml
production/config/patents/: api_config.py  patent_service_config.json
production/config/perception/: enhanced_patent_config.json
production/config/postgresql/: local-optimized.conf
production/config/production/: perception_config.yaml
production/config/prometheus/: alerts.yml  prometheus.yml
production/config/prompts/: legal_writing_style_prompt.md
production/config/redis/: redis.conf
production/config/search/: local_deployment.yaml
production/config/services/: intent_service_mapping.yml  layers.yml  legal_ai_services.json  patent-writing-services.yml  services.yml  services_complete.yml
production/config/systemd/: intent-recognition.service
production/config/templates/: service-template.yaml
production/config/unified/: .env.base  .env.testing  base.yaml  dev.yaml  prod.yaml  test.yaml
(+12484 files in other folders)
