[tool.poetry]
name = "athena-cli"
version = "0.1.0"
description = "Athena专利AI平台命令行工具 - 小诺的爸爸专用工作平台 🌸"
authors = ["徐健 <xujian519@gmail.com>"]
readme = "README.md"
packages = [{include = "athena_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {version = "0.12.5", extras = ["all"]}
rich = "^13.7.0"
httpx = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.9.0"

[tool.poetry.scripts]
athena = "athena_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
