[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amap-mcp-server"
version = "1.0.0"
description = "高德地图MCP服务器 - 为AI模型提供地理空间智能服务"
authors = [
    {name = "Xiao Nuo", email = "xujian519@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "gaode", "maps", "geospatial", "ai"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    "typing-extensions>=4.5.0",
    "structlog>=23.0.0",
    "redis>=4.5.0",
    "geopy>=2.3.0",
    "shapely>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/athena-platform/amap-mcp-server"
"Bug Reports" = "https://github.com/athena-platform/amap-mcp-server/issues"
"Source" = "https://github.com/athena-platform/amap-mcp-server"

[project.scripts]
amap-mcp-server = "amap_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=amap_mcp_server --cov-report=html"