[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "amap-mcp-server"
version = "1.0.0"
description = "高德地图MCP服务器 - 为AI模型提供地理空间智能服务"
authors = ["Xiao Nuo <xujian519@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["mcp", "gaode", "maps", "geospatial", "ai"]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.0.0"
httpx = "^0.24.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.0"
asyncio-throttle = "^1.0.0"
typing-extensions = "^4.5.0"
structlog = "^23.0.0"
redis = "^4.5.0"
geopy = "^2.3.0"
shapely = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.poetry.scripts]
amap-mcp-server = "amap_mcp_server.server:main"

[tool.poetry.urls]
"Homepage" = "https://github.com/athena-platform/amap-mcp-server"
"Bug Reports" = "https://github.com/athena-platform/amap-mcp-server/issues"
"Source" = "https://github.com/athena-platform/amap-mcp-server"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=amap_mcp_server --cov-report=html"