[tool.poetry]
name = "athena-platform"
version = "0.1.0"
description = "Athena工作平台 - 专利智能分析与协作系统"
authors = ["xujian <xujian519@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.9.0"
black = "^25.0.0"
mypy = "^1.14.0"
bandit = "^1.9.0"

[tool.ruff]
# 目标Python版本
target-version = "py311"

# 源代码目录
src = ["core", "dev/dev/tests"]

# 每行最大字符数
line-length = 100

# 排除目录
exclude = [
    ".git",
    ".venv",
    "venv_*",
    "athena_env",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "modules/storage/modules/storage/storage-system",
    "infrastructure/infrastructure/deploy",
    "dev/scripts/venv",
]

[tool.ruff.lint]
# 启用的检查规则
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (注释掉已废弃的代码)
    "RUF",    # Ruff特定规则
]

# 忽略的规则
ignore = [
    "E501",    # 行长度限制（由black处理）
    "B008",    # 函数调用中的默认参数
    "B904",    # 在没有from类的情况下引发异常
    "UP007",   # 使用X | Y代替Union[X, Y]
    "RUF001",  # 字符串中包含全角标点符号（中文项目需要保留）
    "RUF002",  # 文档字符串中包含全角标点符号（中文项目需要保留）
    "RUF003",  # 注释中包含全角标点符号（中文项目需要保留）
]

# 允许自动修复的规则
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# 测试文件特殊规则
"dev/tests/**/*.py" = [
    "ARG",     # 测试中允许未使用的参数
    "S101",    # 测试中允许assert
]

[tool.ruff.lint.isort]
known-first-party = ["core"]
known-third-party = ["pytest", "fastapi", "torch", "transformers"]

[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进样式
indent-style = "space"

# 跳过魔术尾随逗号
skip-magic-trailing-comma = false

# 行结束
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 默认排除
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # 自定义排除
  | venv_*
  | athena_env
  | storage-system
  | deploy
)/
'''

[tool.mypy]
# 目标Python版本
python_version = "3.11"

# 严格模式
strict = true

# 源代码目录
mypy_path = "core"

# 显示错误代码
show_error_codes = true

# 显示列号
show_column_numbers = true

# 跟踪源文件
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # 暂时不强制要求所有函数都有类型注解
disallow_incomplete_defs = false

# 忽略缺失导入
ignore_missing_imports = true

# 排除目录
exclude = [
    "venv_*",
    "athena_env",
    "modules/storage/modules/storage/storage-system",
    "infrastructure/infrastructure/deploy",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
# 测试文件放宽限制
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
# 最小Python版本
minversion = "9.0"

# 测试目录
testpaths = ["dev/dev/tests"]

# Python文件模式
python_files = ["test_*.py", "*_test.py"]

# Python类模式
python_classes = ["Test*"]

# Python函数模式
python_functions = ["test_*"]

# 命令行选项
addopts = [
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "-ra",
]

# 标记定义
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "performance: 性能测试",
    "security: 安全测试",
    "slow: 慢速测试",
]

# 异步模式
asyncio_mode = "auto"

# 日志配置
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
# 源代码目录
source = ["core"]

# 分支覆盖率
branch = true

# 并行模式
parallel = true

[tool.coverage.report]
# 排除文件
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.bandit]
# 排除目录
exclude_dirs = [
    "venv_*",
    "athena_env",
    "dev/dev/tests",
    "modules/storage/modules/storage/storage-system",
]

# 测试数量
tests = ["B201", "B301", "B401", "B501", "B601"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
